2007-07-27  Jan-Oliver Wagner <jan-oliver.wagner@intevation.de>

	Doing the 0.9.0 release.

	* VERSION: Set to 0.9.0.

	* CHANGES: Set release date to 2007-07-27.

2007-07-25  Jan-Oliver Wagner <jan-oliver.wagner@intevation.de>

	* openvasd/preferences.c (preferences_new): Defaulting
	nasl_no_signature_checks to yes, because the signatures
	are currently not present.

2007-07-21  Jan-Oliver Wagner <jan-oliver.wagner@intevation.de>

	* INSTALL: just slight correction and attached a warning
	that this is outdated.

2007-07-21  Jan-Oliver Wagner <jan-oliver.wagner@intevation.de>

	* MANIFEST: updated.

2007-07-20  Jan-Oliver Wagner <jan-oliver.wagner@intevation.de>

	Remove support for Unix Sockets for communication between client and
	server. Since SSL support is present, this is not needed anymore for
	security reasons. Considerable performance loss is not expected, only
	at first connection time it might be faster with unix sockets (which
	is not really for sure since the loopback device is also very fast).
	Also, the implementation is suboptimal anyway because it works
	as compile-time option. It is very easy to select between a
	unix domain socket and inet socket at runtime.

	* configure.in: Removed unix-socket handling.

	* configure: updated.

	* include/config.h.in, openvasd/sighand.c, openvasd/preferences.c,
	openvasd/openvasd.c, openvasd/ntp_11.c, openvasd/hosts.c:
	Removed any handling of unix
	sockets (this also removes any occurance of USE_AF_UNIX,
	OPENVAS_ON_SSL, AF_UNIX_PATH, USE_AF_INET, AD_UNIX)

	* openvasd/comm.c: Remove handling for non-SSL conncetions.

2007-07-20  Jan-Oliver Wagner <jan-oliver.wagner@intevation.de>

	* CHANGES: Updated with some notes.

2007-07-20  Jan-Oliver Wagner <jan-oliver.wagner@intevation.de>

	* openvasd/openvasd.c (main): Removed HAVE_SSL remains.

	* Makefile: Removed installation of "nessus-services". This module
	does not need to care about libdir (creation removed)

	* TODO: cleaned a bit.
